<resources>
    <string name="app_name">Qual Operadora</string>
    <string name="opensansregular">OpenSans-Regular.ttf</string>
    <string name="titlePortabilidade">Portabilidade</string>
    <string name="titleContatos">Contatos</string>
    <string name="titleLigacoes">Ligações</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleConsults">Consultas</string>
    <string name="loading">Buscando operadora</string>
    <string name="error">Sem conexão com a internet. \nPor favor tente novamente!</string>
    <string name="carrie">Operadora: </string>
    <string name="region">Região: </string>
    <string name="portabilty">Portabilidade: </string>
    <string name="when">Quando: </string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="logout">Sair</string>
    <string name="save">Gravar</string>
    <string name="notFount">Telefone não encontrado :(</string>
    <string name="carrieOld">Operadora antiga:</string>
    <string name="contact">Contato:</string>
    <string name="phone">Número:</string>
    <string name="chosenYourDdd">Escolha seu DDD:</string>
    <string name="dddAddWithSuccess">\nDDD %s adicionado com sucesso!</string>
    <string name="search">Buscar</string>
    <string name="searchContact">Buscar contatos</string>
    <string name="defaultLabel">Celular</string>
    <string name="contactEdited">Contato editado \ncom sucesso!</string>
    <string name="contactNotEdited">Contato não editado. \nPor favor tente novamente.</string>
    <string name="editContact">Alterando contato</string>
    <string name="options">Opções</string>
    <string name="x">X</string>
    <string name="sms">SMS</string>
    <string name="call">Ligar</string>
    <string name="unknow">Desconhecido</string>
    <string name="searchCarrier">Buscar Operadora</string>
    <string name="keyboardingNumber">Digite um número</string>
    <string name="settings">Configurações</string>
    <string name="showNotification">Mostrar notificações ?</string>
    <string name="showNotificationInfo">Mostrar notificação quando </string>
    <string name="showNotificationInfo2">receber uma ligação ?</string>
    <string name="yesOrNot">Sim/Não</string>
    <string name="showToasts">Mostrar avisos ?</string>
    <string name="showToastsInfo">Mostrar aviso quando </string>
    <string name="showToastsInfo2">receber uma ligação?</string>
    <string name="showNotificationAndToast">Mostrar Notificações / Avisos ?</string>
    <string name="settingDDD">Configurar DDD</string>

    <string-array name="listOptions">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
    </string-array>
    <string name="title_activity_splash">Splash</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
