<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loading">

            <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
                android:id="@+id/progressBarCircularIndeterminate"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="#1E88E5" />

            <com.isl.operadora.Widgets.CustomFontTextView
                android:id="@+id/loadingText"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#1E88E5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:textSize="14dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/loading"
                android:gravity="center" />

        </LinearLayout>

        <!-- ########################################################################################################################### -->
        <!-- ########################################################################################################################### -->
        <!-- ########################################################################################################################### -->

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/carries">

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/logout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="-10dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="right"
                android:background="#FF0000"
                android:text="@string/x" />

            <LinearLayout
                android:id="@+id/labelContact"
                android:layout_marginRight="28dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/contact"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelPhone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/phone"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"  />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/carrie"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/carrie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelCarrieOld"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/carrieOld"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/carrieOld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:maxLines="1"  />

            </LinearLayout>


            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<com.isl.operadora.Widgets.CustomFontTextView-->
                    <!--android:textStyle="bold"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="16dp"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:text="@string/region"-->
                    <!--android:textColor="#1E88E5"-->
                    <!--android:maxLines="1"  />-->

                <!--<com.isl.operadora.Widgets.CustomFontTextView-->
                    <!--android:id="@+id/region"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="16dp"-->
                    <!--android:maxLines="1"-->
                    <!--android:layout_marginBottom="10dp" />-->

            <!--</LinearLayout>-->


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/portabilty"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/portabilty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:maxLines="1"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/labelCanvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/when"
                    android:textColor="#1E88E5"
                    android:maxLines="1"  />

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:id="@+id/when"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:maxLines="1"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="28dp"
                    android:id="@+id/carrieImage"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="28dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/call"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1E88E5"
                    android:text="@string/call" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/sms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1E88E5"
                    android:text="@string/sms" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1E88E5"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>

        <!-- ########################################################################################################################### -->
        <!-- ########################################################################################################################### -->
        <!-- ########################################################################################################################### -->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:id="@+id/notFound">

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.isl.operadora.Widgets.CustomFontTextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notFount"
                    android:textColor="#333"
                    android:maxLines="1"  />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.gc.materialdesign.views.ButtonFlat
                    android:id="@+id/logoutNotFount"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="#1E88E5"
                    android:text="@string/logout" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal"
        android:id="@+id/adMob"
        android:layout_width="360sp"
        android:layout_height="60dp">
    </LinearLayout>

</LinearLayout>